Endret kodestruktur, fjernet modul, lagt til maven plugin